--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_sound: ^2.0.0
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_storage: ^3.1.1
